[package]
name = "yurl"
version = "0.0.2"
authors = ["Dariusz Depta <wisbery@users.noreply.github.com>"]
description = "Yet another URL tool (future project)"
documentation = "https://docs.rs/yurl"
repository = "https://github.com/wisbery/yurl.git"
keywords = ["tool", "URL", "monitoring"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
